# aidk

./: Cargo.toml  LICENSE  README  notes.md  test.txt
src/: main.rs
src/utils/: mod.rs
