[package]
name = "aidk"
version = "0.2.8"
authors = ["Knoxius <knox.dev@proton.me>"]
license = "WTFPL"
description = "Actually I Don't Know"
readme = "README"
homepage = "https://github.com/Knoxius/aidk/"
repository = "https://github.com/Knoxius/aidk/"
keywords = ["cli"]
categories = ["fun"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
indicatif = "0.17.1"
clap = { version = "4.0", features = ["derive"] }

[dev.dependencies]
anyhow = "1"